--- a/client/src/styles/elements/Products.module.scss
+++ b/client/src/styles/elements/Products.module.scss
@@ -1,6 +1,6 @@
 .productContainer {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding-top: 20px;
     flex-wrap: wrap;
 }
