--- a/client/src/styles/Checkout.module.scss
+++ b/client/src/styles/Checkout.module.scss
@@ -53,7 +53,7 @@
 
         td:nth-child(6) {
             width: 300px;
-            display: flex;
+            text-align: center;
             justify-content: center;
         }
 
