--- a/client/src/styles/Navbar.module.scss
+++ b/client/src/styles/Navbar.module.scss
@@ -9,6 +9,15 @@
     padding: 20px 10%;
     z-index: 1000;
 
+    a {
+        color: #1B1C22;
+        font-size: 16px;
+        text-transform: capitalize;
+        padding: 10px 20px;
+        font-weight: 400;
+        transition: all 0.45s ease;
+    }
+
     .navbar {
         display: flex;
         padding: 0;
@@ -20,7 +29,7 @@
             padding: 10px 20px;
             font-weight: 400;
             transition: all 0.45s ease;
-
+        
             &:hover {
                 color: #0BD5CB;
             }
