--- a/client/src/styles/elements/QuantityButtons.module.scss
+++ b/client/src/styles/elements/QuantityButtons.module.scss
@@ -2,6 +2,7 @@
     font-size: 16px;
     width: 150px;
     border: 2px solid #111111;
+    margin: auto;
 
     .items {
         padding: 10px 20px;
