--- a/client/src/styles/ProductPage.module.scss
+++ b/client/src/styles/ProductPage.module.scss
@@ -50,7 +50,7 @@
                 color: #FFFFFF;
                 font-size: 16px;
                 font-weight: 600;
-                padding: 15px 20px;
+                padding: 15px 45px;
                 border: none;
                 outline: none;
                 border-radius: 4px;
@@ -63,6 +63,12 @@
             line-height: 25px;
             white-space: pre-wrap;
         }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .button {
+        padding: 15px 20px;
     }
 }
 
